# picoDrone

./: .gitignore  CMakeLists.txt  NetworkClass.py  README.md  cetvel.aseprite  main copy.cpp  main.cpp  main.py
droneController/: CMakeLists.txt  Drone.cpp  Drone.h
droneController/MPU6050/: CMakeLists.txt  I2Cdev.cpp  I2Cdev.h  MPU6050.cpp  MPU6050.h
droneController/MPU6050/examples/: CMakeLists.txt
droneController/MPU6050/examples/mpu6050_DMP_V6.12/: CMakeLists.txt  I2Cdev.cpp  MPU6050.h  mpu6050_DMP_port.cpp
droneController/MPU6050/examples/mpu6050_calibration/: CMakeLists.txt  MPU6050_6Axis_MotionApps_V6_12.h  helper_3dmath.h  mpu6050_calibration.cpp
droneController/MPU6050/math3d/: CMakeLists.txt
droneController/MessageProtocol/: CMakeLists.txt  WolfLink.cpp  WolfLink.h
droneController/MotorController/: CMakeLists.txt  motorController.cpp  motorController.h
droneController/SensorController/: CMakeLists.txt  SensorController.cpp  SensorController.h
droneController/globalInc/: CMakeLists.txt  global_inc.cpp  global_inc.h
droneController/pid/: CMakeLists.txt  PID_v1.cpp  PID_v1.h
include/: FreeRTOSConfig.h
pcb/: RP2040 Listeeee .xlsx  RP2040_minimal - Copy.kicad_pcb  RP2040_minimal - Copy.kicad_prl  RP2040_minimal - Copy.kicad_pro  RP2040_minimal-rescue.kicad_sym  RP2040_minimal.csv  RP2040_minimal.kicad_pcb  RP2040_minimal.kicad_prl  RP2040_minimal.kicad_pro  RP2040_minimal.kicad_sch  RP2040_minimal.round-tracks-config  RP2040_minimal_AR-Check.txt  logo.kicad_sym  panel.kicad_pro  ~_autosave-RP2040_minimal.kicad_pcb.lck
pcb/gerbers/: gerbers.rar  (+11 more)
(+24 files in other folders)
